# Urho3D-Project-Template

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile-Linux  Dockerfile-Windows  LICENSE  Makefile  README.md  build.gradle.kts  build_linux.sh  build_windows.sh  cmake_install.cmake  settings.gradle.kts
.circleci/: config.yml
.github/workflows/: build.yml  build_android.yml  build_linux.yml  build_linux_no_scripts.yml  build_windows.yml  build_windows_no_scripts.yml  main.yml  remove-old-artifacts.yml
BuildConfig/: CMakeLists.txt  Urho3DCMakeLists.txt
BuildConfig/android/: CMakeLists.txt  gradle.properties  script.sh
BuildConfig/android/SDL/android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
BuildConfig/android/launcher-app/: CMakeLists.txt  build.gradle.kts
BuildConfig/android/launcher-app/src/main/java/com/arnislielturks/project_template/: MainActivity.java
BuildConfig/android/urho3d-lib/src/main/java/org/libsdl/app/: SDLActivity.java
BuildConfig/ios/: CMakeLists.txt  Podfile  script.sh
BuildConfig/linux/: script.sh
BuildConfig/mingw/: script.sh
BuildConfig/web/: application.html  input_fix.js  script.sh
CMake/Modules/: UrhoCommon.cmake
NewStructure/NewStructure/: cmake  gradle  script
NewStructure/NewStructure/app/src/main/: AndroidManifest.xml
NewStructure/ProjectTemplate/: settings.gradle.kts
ProjectTemplate/: .gitignore  CMakeLists.txt
ProjectTemplate/app/: build.gradle.kts
ProjectTemplate/app/src/main/: AndroidManifest.xml
ProjectTemplate/app/src/main/cpp/: BaseApplication.h  LevelManager.h  SceneManagerEvents.h
Source/: BaseApplication.cpp  BaseApplication.h  BaseLevel.cpp  BaseLevel.h  Global.h  Globals.h  LevelManager.cpp  LevelManager.h  LevelManagerEvents.h  MyEvents.h  NetworkEvents.h  SceneManager.cpp  SceneManager.h  SceneManagerEvents.h  Urho3DPlayer.cpp  Urho3DPlayer.h
Source/AndroidEvents/: ServiceCmd.cpp  ServiceCmd.h  ServiceCmd.mm  Wrapper.h  Wrapper.m
Source/Audio/: AudioManager.cpp  AudioManager.h  AudioManagerDefs.h
Source/BehaviourTree/: BehaviourTree.cpp  BehaviourTree.h
Source/Config/: ConfigFile.cpp  ConfigFile.h  ConfigManager.cpp  ConfigManager.h
Source/Console/: ConsoleHandler.cpp  ConsoleHandler.h  ConsoleWindow.cpp  ConsoleWindow.h
Source/Generator/: Generator.cpp  Generator.h  PerlinNoise.h  SimplexNoise.cpp
Source/Input/: ControllerEvents.h  ControllerInput.cpp  ControllerInput.h
Source/Input/Controllers/: BaseInput.h  JoystickInput.cpp  JoystickInput.h  KeyboardInput.cpp  KeyboardInput.h  MouseInput.cpp  MouseInput.h  ScreenJoystickInput.cpp  ScreenJoystickInput.h
Source/Levels/: Credits.cpp  Credits.h  ExitGame.cpp  ExitGame.h  Level.cpp  Level.h  Loading.cpp  Loading.h  MainMenu.cpp  MainMenu.h  Splash.cpp  Splash.h
Source/Levels/Maze/: Maze.cpp  Maze.h  MazeGenerator.h
Source/Levels/Player/: Player.cpp  Player.h  PlayerEvents.h  PlayerState.cpp  PlayerState.h
Source/Levels/Voxel/: Chunk.cpp  Chunk.h  ChunkGenerator.cpp  ChunkGenerator.h  ChunkMesh.cpp  ChunkMesh.h  ChunkNetworkState.cpp  ChunkNetworkState.h  LightManager.cpp  LightManager.h  TreeGenerator.cpp  TreeGenerator.h  VoxelDefs.h  VoxelEvents.h  VoxelWorld.cpp  VoxelWorld.h
Source/Messages/: Achievements.cpp  Achievements.h  Message.cpp  Message.h  Notifications.cpp  Notifications.h  SingleAchievement.cpp  SingleAchievement.h
Source/Mods/: ModLoader.cpp  ModLoader.h
Source/Nakama/: NakamaManager.cpp  PacketHandler.cpp
Source/PackageManager/: PackageManager.cpp  PackageManager.h  PackageManagerEvents.h
Source/Player/: Player.cpp  PlayerState.cpp
Source/State/: State.cpp  State.h  StateEvents.h
Source/UI/: BaseWindow.cpp  BaseWindow.h  NuklearUI.cpp  NuklearUI.h  WindowEvents.h  WindowManager.cpp  WindowManager.h  nuklear.h
Source/UI/Achievements/: AchievementsWindow.cpp  AchievementsWindow.h
Source/UI/Console/: ConsoleWindow.cpp  ConsoleWindow.h
Source/UI/NewGameSettings/: NewGameSettingsWindow.cpp  NewGameSettingsWindow.h
Source/UI/Pause/: PauseWindow.cpp  PauseWindow.h
Source/UI/PopupMessage/: PopupMessageWindow.cpp  PopupMessageWindow.h
Source/UI/QuitConfirmation/: QuitConfirmationWindow.cpp  QuitConfirmationWindow.h
Source/UI/Scoreboard/: ScoreboardWindow.cpp  ScoreboardWindow.h
Source/UI/Settings/: SettingsWindow.cpp  SettingsWindow.h  UIOption.cpp  UIOption.h
Source/UI/SettingsNew/: SettingsWindowV2.cpp  SettingsWindowV2.h  UIOption.cpp  UIOption.h
Source/UI/WeaponChoice/: WeaponChoiceWindow.cpp  WeaponChoiceWindow.h
android/: CMakeLists.txt  script.sh
android/SDL/android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/launcher-app/: CMakeLists.txt  build.gradle.kts
android/launcher-app/src/main/: AndroidManifest.xml
android/launcher-app/src/main/java/com/github/urho3d/launcher/: LauncherActivity.kt  MainActivity.java  MainActivity.kt
android/launcher-app/src/main/java/org/libsdl/app/: SDLActivity.java
android/urho3d-lib/: build.gradle.kts
android/urho3d-lib/src/main/java/org/libsdl/app/: SDLActivity.java
app/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BaseApplication.cpp  BaseLevel.h  CustomEvents.h
app/src/main/cpp/AndroidEvents/: AndroidDefines.h  NSObject.h  ServiceEvents.h
app/src/main/cpp/BehaviourTree/: BehaviourTreeDefs.h
app/src/main/cpp/Config/: ConfigManager.h
app/src/main/cpp/Generator/: Generator.cpp
app/src/main/cpp/Globals/: CollisionLayers.h  ViewLayers.h
app/src/main/cpp/Input/: ControllerEvents.h
app/src/main/cpp/Levels/: ExitGame.h  Loading.cpp  MainMenu.h
app/src/main/cpp/Messages/: MessageEvents.h  Notifications.cpp  SingleAchievement.cpp
app/src/main/cpp/Mods/: ModLoader.h
app/src/main/cpp/Nakama/: NakamaEvents.h  NakamaManager.h  NetworkProtocol.h  PacketHandler.cpp  (+1 more)
cmake/Modules/: AdjustPkgConfigForMSVC.cmake  CheckCompilerToolchain.cmake  FindUrho3D.cmake  GetUrhoRevision.cmake  UrhoCommon.cmake
cmake/Toolchains/: Emscripten.cmake
script/: dockerized.sh
web/: CMakeLists.txt  Urho3DCMakeLists.txt  application.html  script.sh
(+77 files in other folders)
